overlap fix

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
   border-radius: 0 0 1rem 1rem;
   background-color: #8000FF00;
   filter: drop-shadow(0 0 20px #000000);
-  z-index: 2;
+  z-index: 3;
   transition: background-color 0.2s ease-in-out;
 }
 header.scrolled {
@@ -24,7 +24,7 @@ footer {
   border-radius: 1rem 1rem 0 0;
   background-color: #8000FF;
   filter: drop-shadow(0 0 20px #000000);
-  z-index: 2;
+  z-index: 3;
 }
 body {
   font-family: Montserrat;
@@ -438,7 +438,7 @@ pagefade {
     filter: drop-shadow(0 0 20px #000000);
     top: 68.91px;
     transition: transform 0.2s ease-in-out;
-    z-index: 1;
+    z-index: 2;
   }
   .mobilenav #mobileLinks {
     display: none;
